Made becnhmark model

--- a/Lending Club - Loan data Analysis.ipynb
+++ b/Lending Club - Loan data Analysis.ipynb
@@ -1855,8 +1855,7 @@
    },
    "outputs": [],
    "source": [
-    "### getting the correlational matrix \n",
-    "cormat = mini_l.corr()"
+    "### getting the correlational matrix \n"
    ]
   },
   {
@@ -1878,7 +1877,7 @@
     }
    ],
    "source": [
-    "\n",
+    "cormat = mini_l.corr()\n",
     "# Set up the matplotlib figure\n",
     "f, ax = plt.subplots(figsize=(20, 20))\n",
     "#drawing heat map\n",
